--- a/order-summary-component-main/style.css
+++ b/order-summary-component-main/style.css
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@900&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Ubuntu", sans-serif;
 }
 
 html {
@@ -19,17 +21,15 @@ body {
   border-radius: 2rem;
   margin: 2rem;
   border-radius: 1rem;
-  background-color: whitesmoke;
+  background-color: rgb(255, 255, 255);
 }
 body:hover {
   box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.281);
-
   transition: 0.7s;
 }
 .hero {
   display: block;
   width: 100%;
-
   border-radius: 1rem 1rem 0 0;
 }
 h1 {
@@ -50,23 +50,31 @@ h1 {
   border-radius: 2rem;
   padding: 2rem;
   margin-bottom: 2rem;
+  background-color: rgb(243, 243, 248);
+}
+.annualPlan {
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 button {
   width: 80%;
   margin: 1rem;
   padding: 1rem;
   border-radius: 1rem;
-  border-color: white;
   color: white;
-  background-color: #766cf1;
+  background-color: #382ae4;
   font-weight: 900;
+  border: none;
 }
 button:hover {
-  background-color: #5a52ad;
+  background-color: #1602fb;
 }
 .cancel {
-  background-color: rgba(220, 215, 204, 0.199);
+  background-color: #fff;
   color: black;
+  border: none;
 }
 .cancel:hover {
   background-color: rgba(255, 0, 0, 0.516);
