--- a/order-summary-component-main/style.css
+++ b/order-summary-component-main/style.css
@@ -86,3 +86,19 @@ a {
 a:hover {
   color: red;
 }
+@media screen and (max-width: 376px) {
+  body{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  }
+  .hero{
+    border-radius: 0;
+  }
+  .payment{
+    width: 100%;
+  }
+  .annualPlan{
+    width: 50%;
+  }
+}
