--- a/order-summary-component-main/style.css
+++ b/order-summary-component-main/style.css
@@ -9,7 +9,9 @@
 html {
   display: flex;
   justify-content: center;
-  background-color: #d6e1ff;
+  background: url(../order-summary-component-main/images/pattern-background-desktop.svg);
+  background-repeat: no-repeat;
+  background-color: #e1e9ff;
 }
 body {
   display: flex;
@@ -17,7 +19,6 @@ body {
   align-items: center;
   flex-direction: column;
   width: 40%;
-  height: 40%;
   border-radius: 2rem;
   margin: 2rem;
   border-radius: 1rem;
@@ -48,7 +49,7 @@ h1 {
   justify-content: space-between;
   align-items: center;
   border-radius: 2rem;
-  padding: 2rem;
+  padding:  2rem 1rem;
   margin-bottom: 2rem;
   background-color: rgb(243, 243, 248);
 }
@@ -57,6 +58,7 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  
 }
 button {
   width: 80%;
@@ -87,18 +89,18 @@ a:hover {
   color: red;
 }
 @media screen and (max-width: 376px) {
-  body{
-  width: 100%;
-  height: 100%;
-  margin: 0;
+  body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
   }
-  .hero{
+  .hero {
     border-radius: 0;
   }
-  .payment{
+  .payment {
     width: 100%;
   }
-  .annualPlan{
+  .annualPlan {
     width: 50%;
   }
 }
